fix sidebar menu double borders

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -223,7 +223,6 @@ ul.sidebar-menu li ul.sub li a:hover, ul.sidebar-menu li ul.sub li.active a {
 
 ul.sidebar-menu li {
     display: inline;
-    margin-top: -1px;
     line-height: 20px !important;
     text-transform: capitalize;
 }
@@ -250,7 +249,7 @@ ul.sidebar-menu li a {
     -o-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
     transition: all 0.3s ease;
-    border: 1px solid #D7D7D7;
+    border-bottom: 1px solid #D7D7D7;
     overflow:hidden;
 }
 
